--- a/day5/fullstackPlacement/src/assets/css/NavBar.css
+++ b/day5/fullstackPlacement/src/assets/css/NavBar.css
@@ -4,7 +4,7 @@ ul {
   margin: 0;
   justify-content: space-evenly;
   list-style-type: none;
-  background-color: rgb(236, 149, 217);
+  background-color: chocolate;
   color: aliceblue;
   padding: 10px;
 }
